Added check if fontEngine is still in the cache.

Task-number: QTBUG-22942
Change-Id: I9e4ac72168886769993cb19fac7a370c377ff3af
Reviewed-by: Konstantin Ritt <ritt.ks@gmail.com>
(cherry picked from commit 8960f7356796948b161159cff404a9ebd1624c5f)